app/sidecar.yaml
static_resources:
  clusters:
  - name: local
    connect_timeout: 5s
    type: strict_dns
    dns_lookup_family: V4_ONLY
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 80
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local
              domains:
              - "localhost"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local
          http_filters:
          - name: envoy.router
            config: {}
      transport_socket:
        name: envoy.transport_sockets.tls
        config:
          require_client_certificate: true
          common_tls_context:
            validation_context:
              trusted_ca:
                filename: /etc/envoy/cloudflare-ca.pem
            tls_certificates:
            - certificate_chain:
                filename: /var/run/certs/tls.crt
              private_key:
                filename: /var/run/certs/tls.key
